--- a/admin/src/Components/Admin/Sidebar.css
+++ b/admin/src/Components/Admin/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   width: 250px;
-  height: auto;
+  /* height: 100vh; */
   background-color: #145A98;
   color: white;
   padding: 15px;
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   transition: transform 0.3s ease;
+  overflow-y: auto; 
 }
 
 .sidebar .logo1 {
@@ -27,100 +28,62 @@
 
 .sidebar ul li {
   padding: 10px;
-  cursor: pointer;
-  /* text-align: center; */
-  transition: background-color 0.3s;
+  /* transition: background-color 0.3s; */
 }
+
 .sidebar ul li a {
   text-decoration: none;
   color: white;
+  width: 100%;
+  cursor: pointer;
 }
 
-.sidebar ul li:hover {
+/* .sidebar ul li:hover {
   background-color: #1e81ce;
-}
-
-@media (max-width: 768px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px 0;
-    transform: translateY(100%);
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-  }
-
-  .sidebar .logo1 {
-    width: 50px;
-    height: 50px;
-    margin: 0;
-  }
-
-  .sidebar ul {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-  }
-
-  .sidebar ul li {
-    padding: 10px;
-    font-size: 0.9rem;
-  }
-}
-
-@media (max-width: 480px) {
-  .sidebar {
-    flex-direction: column;
-    transform: translateX(-100%);
-    width: 200px;
-    height: 100vh;
-    align-items: flex-start;
-    padding: 20px;
-    transform: translateX(-100%);
-  }
-
-  .sidebar ul {
-    flex-direction: column;
-  }
-
-  .sidebar ul li {
-    padding: 15px;
-    font-size: 1rem;
-  }
-}
+} */
 
 .menu-toggle {
   display: none;
 }
 
 @media (max-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    transform: translateX(-100%);
+    width: 200px;
+    padding: 20px;
+    z-index: 10;
+  }
+
+  .sidebar.open {
+    transform: translateX(0);
+  }
+
   .menu-toggle {
     display: block;
     background-color: #145A98;
     color: white;
-    /* border: none; */
     font-size: 1.5rem;
-    padding: 10px;
+    padding: 4px 15px;
     cursor: pointer;
     position: fixed;
-    /* bottom: -71px; */
-    right: 0px;
-    top: 56px;
+    top: 15px;
+    right: 15px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1001;
-    /* border-radius: 50%; */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s, transform 0.3s;
   }
-}
 
-.sidebar.open {
-  transform: translateX(0);
-}
-
-.sidebar.closed {
-  transform: translateX(-100%);
+  .menu-toggle:hover {
+    background-color: #1e81ce;
+    transform: scale(1.05);
+  }
+  .sidebar .logo1 {
+    margin-right: 60px;
+  }
 }
